add babel,add extract plugin,add i18n,add themeSwitcher,add sidebar,add navbar,add appRouter

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "jsx": "react-jsx",
     "allowJs": true, // позволет компилятору обрабатывать не только TS файлы , но и JS файлы
     "baseUrl": ".", // Для абсолютного импорта
+    "paths": {
+      "*": ["./src/*"]
+    },
     "moduleResolution": "node", // опрдееляет то какие импорты будут
     // Если какая либо библиотека не имеет default import,
     // лоадеры вроде ts-loader или babel-loader автоматически создают их
