--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,8 @@
     }
   },
   "include": [
-    "./config/jest/setupTests.ts"
+    "./config/jest/setupTests.ts",
+    "src/**/*.ts",
+    "src/**/*.tsx",
   ]
 }
