fix tests, fix typings, add profile

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "target": "es5",// в какую спецификацию компилируем: для поддержки большинства браузеров
     "jsx": "react-jsx",
     "allowJs": true, // позволет компилятору обрабатывать не только TS файлы , но и JS файлы
+    "strict": true,
     "baseUrl": ".", // Для абсолютного импорта
     "paths": {
       "*": ["./src/*"]
